just let mocha run right away but comment out the initial tests for now

--- a/tdd.html
+++ b/tdd.html
@@ -20,8 +20,7 @@
         <script src='test.js'></script>
         <script>
             window.onload = function() {
-              //When you're ready to start testing, uncomment this line!
-              //mocha.run();
+              mocha.run();
             }
         </script>
 
